@@ -45,6 +45,8 @@ out to
 <li> Mats Bengtsson, for tirelessly answering
 questions
 
+<li> Matthias Neeracher, for keeping the MacOS X fink port up-to-date.
+
 <li> Paul Roberts and James Ingram, for music engraving tips
 
 </ul>
