@@ -209,7 +209,7 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
     </td>
     <td>2.4.6</td>  
     <td>
-      <a href="mailto:neeracherATmacDOTcom">Matthias Neeracher</a>
+      <a href="http://homepage.mac.com/neeracher/contact.html">Matthias Neeracher</a>
     </td> 
   </tr>
 
@@ -382,7 +382,7 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
     </td>
     <td>2.5.23</td>  
     <td>
-      <a href="mailto:neeracherATmacDOTcom">Matthias Neeracher</a>
+      <a href="http://homepage.mac.com/neeracher/contact.html">Matthias Neeracher</a>
     </td> 
   </tr>
 
@@ -586,7 +586,7 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
     </td>
     <td>2.2.6</td>  
     <td>
-      <a href="mailto:neeracherATmacDOTcom">Matthias Neeracher</a>
+      <a href="http://homepage.mac.com/neeracher/contact.html">Matthias Neeracher</a>
     </td> 
   </tr>
 
